Implement floating emotes and side decoration
Added floating emotes and side decoration to enhance visual appeal.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
             z-index: 1;
         }
 
+        /* Dekorisasi Emote di Samping */
+        .side-decoration {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 5;
+        }
+
+        .floating-emote {
+            position: absolute;
+            font-size: 2rem;
+            animation: float 4s ease-in-out infinite;
+            opacity: 0.8;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0) rotate(0deg); }
+            50% { transform: translateY(-20px) rotate(10deg); }
+        }
+
         .container {
             position: relative;
             z-index: 10;
@@ -101,7 +123,7 @@
 
         .top-text {
             color: #d63384;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             position: fixed;
             top: 30px;
             width: 100%;
@@ -130,7 +152,6 @@
             position: relative;
         }
 
-        /* LOADING INTERNAL KARTU */
         #card-loading {
             display: flex;
             flex-direction: column;
@@ -158,14 +179,11 @@
             background: #ff4d6d;
         }
 
-        /* CONTENT SETELAH LOADING */
         #card-content {
             width: 100%;
-            height: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: space-between;
         }
 
         .photo-img {
@@ -184,7 +202,6 @@
             font-weight: bold;
         }
 
-        /* ANIMASI CONFETTI */
         .confetti {
             position: fixed;
             width: 10px;
@@ -209,6 +226,15 @@
 
     <canvas id="hearts-canvas"></canvas>
 
+    <div class="side-decoration">
+        <div class="floating-emote" style="left: 5%; top: 20%;">🌸</div>
+        <div class="floating-emote" style="left: 10%; top: 60%; animation-delay: 1s;">✨</div>
+        <div class="floating-emote" style="right: 5%; top: 15%; animation-delay: 0.5s;">🧸</div>
+        <div class="floating-emote" style="right: 12%; top: 70%; animation-delay: 1.5s;">🍭</div>
+        <div class="floating-emote" style="left: 8%; top: 40%; animation-delay: 2s; font-size: 1.5rem;">💕</div>
+        <div class="floating-emote" style="right: 8%; top: 45%; animation-delay: 0.8s; font-size: 1.5rem;">☁️</div>
+    </div>
+
     <div class="container" id="slide1">
         <div class="dear-someone">Dear Someone</div>
         <h1 class="main-title">Will you be my Valentine?</h1>
@@ -219,10 +245,10 @@
     </div>
 
     <div class="container hidden" id="slide2">
+        <div class="top-text">I guess there's only one answer</div>
         <h2 class="yay-text">Yay! I knew you'd say yes!</h2>
 
         <div class="hug-card">
-            
             <div id="card-loading">
                 <div class="loading-label">sending virtual hug...</div>
                 <div class="progress-bar">
@@ -235,10 +261,9 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMEgO7xGzNvwgNJDmSpgAYaBfgE6Z7K_OnSA&s" class="photo-img" alt="hug-photo">
                 <div class="sent-btn">Sent with love!</div>
             </div>
-
         </div>
 
-        <div class="bottom-text" id="final-msg" class="hidden">You've made me the happiest! 💕</div>
+        <div class="bottom-text">You've made me the happiest! 💕</div>
     </div>
 
     <script>
@@ -249,7 +274,6 @@
         const cardLoading = document.getElementById('card-loading');
         const cardContent = document.getElementById('card-content');
 
-        // Fungsi Tombol No Menghindar
         function moveButton() {
             const maxX = window.innerWidth - noBtn.offsetWidth - 50;
             const maxY = window.innerHeight - noBtn.offsetHeight - 50;
@@ -259,28 +283,24 @@
         noBtn.addEventListener('mouseover', moveButton);
         noBtn.addEventListener('touchstart', (e) => { e.preventDefault(); moveButton(); });
 
-        // Handler Klik Yes
         function handleYes() {
             slide1.classList.add('hidden');
             slide2.classList.remove('hidden');
             
-            // Animasi progress bar di dalam kartu
             let width = 0;
             const interval = setInterval(() => {
                 if (width >= 100) {
                     clearInterval(interval);
-                    // Sembunyikan loading, munculkan foto & confetti
                     cardLoading.classList.add('hidden');
                     cardContent.classList.remove('hidden');
                     createConfetti();
                 } else {
-                    width += 2; // Kecepatan loading
+                    width += 2;
                     fill.style.width = width + '%';
                 }
-            }, 50); 
+            }, 40); 
         }
 
-        // Animasi Meriah (Confetti)
         function createConfetti() {
             const colors = ['#ff4d6d', '#ffccd5', '#ff8fa3', '#c9184a', '#ffffff'];
             for (let i = 0; i < 120; i++) {
@@ -298,7 +318,6 @@
             }
         }
 
-        // Background Hati Berjatuhan (Tetap)
         const canvas = document.getElementById('hearts-canvas');
         const ctx = canvas.getContext('2d');
         let hearts = [];
@@ -329,18 +348,15 @@
             }
         }
 
-        function init() {
-            for (let i = 0; i < 40; i++) hearts.push(new Heart());
-        }
-
+        window.addEventListener('resize', resize);
+        resize();
+        for (let i = 0; i < 40; i++) hearts.push(new Heart());
         function animate() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             hearts.forEach(h => { h.update(); h.draw(); });
             requestAnimationFrame(animate);
         }
-
-        window.addEventListener('resize', resize);
-        resize(); init(); animate();
+        animate();
     </script>
 </body>
 </html>
