Refactor floating emotes and animation properties

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         .side-decoration {
             position: fixed;
             top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             pointer-events: none;
@@ -46,14 +47,13 @@
 
         .floating-emote {
             position: absolute;
-            font-size: 2rem;
             animation: float 4s ease-in-out infinite;
-            opacity: 0.8;
+            opacity: 0.9;
         }
 
         @keyframes float {
-            0%, 100% { transform: translateY(0) rotate(0deg); }
-            50% { transform: translateY(-20px) rotate(10deg); }
+            0%, 100% { transform: translateY(0) rotate(0deg) scale(1); }
+            50% { transform: translateY(-30px) rotate(15deg) scale(1.1); }
         }
 
         .container {
@@ -120,15 +120,6 @@
 
         /* SLIDE 2 & KARTU */
         .hidden { display: none !important; }
-
-        .top-text {
-            color: #d63384;
-            font-size: 1.1rem;
-            position: fixed;
-            top: 30px;
-            width: 100%;
-            text-align: center;
-        }
 
         .yay-text {
             font-family: 'Pacifico', cursive;
@@ -227,12 +218,14 @@
     <canvas id="hearts-canvas"></canvas>
 
     <div class="side-decoration">
-        <div class="floating-emote" style="left: 5%; top: 20%;">🌸</div>
-        <div class="floating-emote" style="left: 10%; top: 60%; animation-delay: 1s;">✨</div>
-        <div class="floating-emote" style="right: 5%; top: 15%; animation-delay: 0.5s;">🧸</div>
-        <div class="floating-emote" style="right: 12%; top: 70%; animation-delay: 1.5s;">🍭</div>
-        <div class="floating-emote" style="left: 8%; top: 40%; animation-delay: 2s; font-size: 1.5rem;">💕</div>
-        <div class="floating-emote" style="right: 8%; top: 45%; animation-delay: 0.8s; font-size: 1.5rem;">☁️</div>
+        <div class="floating-emote" style="left: 3%; top: 15%; font-size: 3.5rem;">❤️</div>
+        <div class="floating-emote" style="left: 12%; top: 40%; font-size: 2.5rem; animation-delay: 1s;">💖</div>
+        <div class="floating-emote" style="left: 5%; top: 70%; font-size: 3rem; animation-delay: 2s;">❤️</div>
+        <div class="floating-emote" style="right: 3%; top: 20%; font-size: 3.2rem; animation-delay: 0.5s;">💖</div>
+        <div class="floating-emote" style="right: 10%; top: 50%; font-size: 2.8rem; animation-delay: 1.5s;">❤️</div>
+        <div class="floating-emote" style="right: 6%; top: 80%; font-size: 3.4rem; animation-delay: 2.5s;">💖</div>
+        <div class="floating-emote" style="left: 18%; top: 10%; font-size: 2rem;">🌸</div>
+        <div class="floating-emote" style="right: 18%; top: 12%; font-size: 2rem;">✨</div>
     </div>
 
     <div class="container" id="slide1">
@@ -245,7 +238,6 @@
     </div>
 
     <div class="container hidden" id="slide2">
-        <div class="top-text">I guess there's only one answer</div>
         <h2 class="yay-text">Yay! I knew you'd say yes!</h2>
 
         <div class="hug-card">
@@ -295,21 +287,21 @@
                     cardContent.classList.remove('hidden');
                     createConfetti();
                 } else {
-                    width += 2;
+                    width += 2.5;
                     fill.style.width = width + '%';
                 }
-            }, 40); 
+            }, 50); 
         }
 
         function createConfetti() {
             const colors = ['#ff4d6d', '#ffccd5', '#ff8fa3', '#c9184a', '#ffffff'];
-            for (let i = 0; i < 120; i++) {
+            for (let i = 0; i < 150; i++) {
                 const confetti = document.createElement('div');
                 confetti.className = 'confetti';
                 confetti.style.left = Math.random() * 100 + 'vw';
                 confetti.style.top = '-10px';
                 confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-                confetti.style.width = Math.random() * 8 + 5 + 'px';
+                confetti.style.width = Math.random() * 10 + 5 + 'px';
                 confetti.style.height = confetti.style.width;
                 confetti.style.borderRadius = '50%';
                 confetti.style.animation = `fall ${Math.random() * 3 + 2}s linear forwards`;
@@ -332,7 +324,7 @@
             reset() {
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * -100;
-                this.size = Math.random() * 10 + 10;
+                this.size = Math.random() * 15 + 10;
                 this.speed = Math.random() * 1.5 + 0.5;
                 this.opacity = Math.random() * 0.4 + 0.2;
             }
@@ -350,7 +342,7 @@
 
         window.addEventListener('resize', resize);
         resize();
-        for (let i = 0; i < 40; i++) hearts.push(new Heart());
+        for (let i = 0; i < 45; i++) hearts.push(new Heart());
         function animate() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             hearts.forEach(h => { h.update(); h.draw(); });
